zetasql/analyzer/testdata/alter_table_alter_constraint.test
# Alter table alter constraint is not supported in analyzer yet.
alter table t alter constraint a_gt_zero ENFORCED;
--
ERROR: ALTER CONSTRAINT ENFORCED/NOT ENFORCED is not supported [at 1:15]
alter table t alter constraint a_gt_zero ENFORCED;
              ^
